--- a/style.css
+++ b/style.css
@@ -42,12 +42,12 @@ h2 {
     color: black;
     margin-left: 40px;
     text-decoration: underline;
-    text-decoration-color: #8AAECC;
+    text-decoration-color: orange;
 }
 
 h3 {
     font-family: 'Source Code Pro', monospace;
-    font-size: 1.3rem;
+    font-size: 1.0rem;
     color: #134B7C;
     margin-left: 40px;
 }
@@ -57,7 +57,8 @@ h4 {
     font-size: 0.9rem;
     color: grey;
     margin-left: 40px;
-    text-decoration: underline;
+    text-decoration: overline;
+    text-decoration-color: #3E7098;
 }
 
 h5 {
@@ -77,7 +78,22 @@ h6 {
 }
 
 h6:hover {
+    text-decoration: overline;
+    text-decoration-color: orange;
+}
+
+h7 {
+    font-family: 'Source Code Pro', monospace;
+    font-size: 1rem;
+    color: black;
+    margin-left: 40px;
     text-decoration: underline;
+    text-decoration-color: orange;
+    margin-bottom: 20px;
+}
+
+h7:hover {
+    text-decoration: overline;
     text-decoration-color: orange;
 }
 
@@ -451,29 +467,26 @@ i {
 #web .sectionwrapper {
     display: flex;
     flex-wrap: wrap;
-    width: 100vw;
-    height: 56.25vw;
+
 }
 
 #animation .sectionwrapper {
     display: flex;
     flex-wrap: wrap;
-    width: 100vw;
-    height: 56.25vw;
+    flex-direction: row-reverse;
+
 }
 
 #content .sectionwrapper {
     display: flex;
     flex-wrap: wrap;
-    width: 100vw;
-    height: 56.25vw;
+
 }
 
 #ux .sectionwrapper {
-    display: block;
+    display: flex;
     flex-wrap: wrap;
-    width: 100vw;
-    height: 56.25vw;
+    flex-direction: row-reverse;
 }
 
 #web .col {
@@ -567,7 +580,8 @@ i {
 }
 
 @media screen and (max-width: 1150px) {
-    #portfolio_intro {
-        flex-direction: row;
+    #portfolio_intro .sectionwrapper {
+        width: 100vw;
+        height: auto;
     }
 }
